--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,63 +9,120 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.acmel.proyecto.miscontactos.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Crear Contacto"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <EditText
+    <TabHost
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/cmpNombre"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:hint="Nombre del Contacto"
-        android:layout_marginTop="15dp" />
+        android:layout_height="match_parent"
+        android:id="@+id/tabHost"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="phone"
-        android:ems="10"
-        android:id="@+id/cmpTelefono"
-        android:layout_below="@+id/cmpNombre"
-        android:layout_centerHorizontal="true"
-        android:hint="Teléfono" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:id="@+id/cmpEmail"
-        android:layout_below="@+id/cmpTelefono"
-        android:layout_centerHorizontal="true"
-        android:hint="Correo electrónico" />
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></TabWidget>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPostalAddress"
-        android:ems="10"
-        android:id="@+id/cmpDireccion"
-        android:layout_below="@+id/cmpEmail"
-        android:layout_centerHorizontal="true"
-        android:hint="Dirección" />
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Agregar Contacto"
-        android:id="@+id/btnAgregar"
-        android:layout_below="@+id/cmpDireccion"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp"
-        android:onClick="onClick"/>
+                <LinearLayout
+                    android:id="@+id/tab1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="Crear Contacto"
+                        android:id="@+id/textView"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp"
+                        android:layout_gravity="center_horizontal" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPersonName"
+                        android:ems="10"
+                        android:id="@+id/cmpNombre"
+                        android:layout_below="@+id/textView"
+                        android:layout_centerHorizontal="true"
+                        android:hint="Nombre del Contacto"
+                        android:layout_marginTop="15dp" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="phone"
+                        android:ems="10"
+                        android:id="@+id/cmpTelefono"
+                        android:layout_below="@+id/cmpNombre"
+                        android:layout_centerHorizontal="true"
+                        android:hint="Teléfono" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textEmailAddress"
+                        android:ems="10"
+                        android:id="@+id/cmpEmail"
+                        android:layout_below="@+id/cmpTelefono"
+                        android:layout_centerHorizontal="true"
+                        android:hint="Correo electrónico" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPostalAddress"
+                        android:ems="10"
+                        android:id="@+id/cmpDireccion"
+                        android:layout_below="@+id/cmpEmail"
+                        android:layout_centerHorizontal="true"
+                        android:hint="Dirección" />
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Agregar Contacto"
+                        android:id="@+id/btnAgregar"
+                        android:layout_below="@+id/cmpDireccion"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp"
+                        android:onClick="onClick"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/tab2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="LIsta de Contactos"
+                        android:id="@+id/textView2"
+                        android:layout_marginTop="15dp" />
+
+                    <ListView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/listView" />
+
+                </LinearLayout>
+
+            </FrameLayout>
+        </LinearLayout>
+    </TabHost>
+
 </RelativeLayout>
