--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
                     <ImageView
                         android:layout_width="96dp"
                         android:layout_height="96dp"
-                        android:id="@+id/imageView"
+                        android:id="@+id/imgViewContacto"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="10dp"
                         android:scaleType="fitCenter"
